# ImageBatch

./: CMakeLists.txt  README.md
src/: App.cpp  App.h  CropPanel.cpp  CropPanel.h  MainFrame.cpp  MainFrame.h  Operation.h  RenamePanel.cpp  RenamePanel.h  ResizePanel.cpp  ResizePanel.h  Resource.rc  resource.h
